# plover_pseudo

./: README.md  setup.cfg
plover_pseudo/: system.py
