[metadata]
name = sktpwhnr
version = 0.0.1
description = English Stenotype with SKTPWHNR
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
packages =
    sktpwhnr
install_requires =
    plover>=5.0

[options.entry_points]
plover.system =
    English Stenotype (SKTPWHNR) = sktpwhnr.system
