[metadata]
name = plover_pseudo
version = 0.0.1
description = English Stenotype with SKTPWHNR
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
packages =
    plover_pseudo
install_requires =
    plover>=5.0

[options.entry_points]
plover.system =
    English Stenotype (SKTPWHNR) = plover_pseudo.system

